[life-xp-xp-service-18] create openapi
